--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.12.1"
+bevy-inspector-egui = "0.21.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
